syntax = "proto3";

package shared;

message AccountBalanceHistory {
  int32 account_id = 1;

  float amount = 2;

  string date = 3;
}

